--- a/lançamentos-contracheque.ipynb
+++ b/lançamentos-contracheque.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "from datetime import datetime\n",
-    "import locale\n",
+    "import locale as lc\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "import matplotlib.pyplot as plt\n",
@@ -16,12 +16,12 @@
     "\n",
     "load_dotenv()\n",
     "\n",
-    "locale.setlocale(locale.LC_ALL, \"pt_BR.UTF-8\")\n",
-    "locale.setlocale(locale.LC_MONETARY, \"pt_BR.UTF-8\")\n",
+    "lc.setlocale(category=lc.LC_ALL, locale=\"pt_BR.UTF-8\")\n",
+    "lc.setlocale(category=lc.LC_MONETARY, locale=\"pt_BR.UTF-8\")\n",
     "\n",
-    "pd.set_option(\"display.float_format\", lambda val: locale.currency(val=val, symbol=False, grouping=True))\n",
+    "pd.set_option(\"display.float_format\", lambda val: lc.currency(val=val, symbol=False, grouping=True))\n",
     "\n",
-    "engine: sa.Engine = sa.engine.create_engine(os.getenv(\"URL_MYSQL\"))"
+    "engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_MYSQL\"))"
    ],
    "outputs": [],
    "execution_count": null
@@ -240,7 +240,7 @@
     "ax.set(xlabel=\"\", ylabel=\"\", yticks=[])\n",
     "\n",
     "for mes in range(12):\n",
-    "    ax.bar_label(ax.containers[mes], fmt=lambda i: locale.currency(val=i, symbol=False, grouping=True), fontsize=10)\n",
+    "    ax.bar_label(ax.containers[mes], fmt=lambda i: lc.currency(val=i, symbol=False, grouping=True), fontsize=10)\n",
     "\n",
     "plt.show()"
    ],
@@ -287,7 +287,7 @@
     "    ax.set(xlabel=\"\", ylabel=\"\", yticks=[])\n",
     "\n",
     "    for mes in range(12):\n",
-    "        ax.bar_label(ax.containers[mes], fmt=lambda i: locale.currency(val=i, symbol=False, grouping=True), fontsize=10)\n",
+    "        ax.bar_label(ax.containers[mes], fmt=lambda i: lc.currency(val=i, symbol=False, grouping=True), fontsize=10)\n",
     "\n",
     "    plt.show()\n",
     "else:\n",
