--- a/lançamentos-contracheque.ipynb
+++ b/lançamentos-contracheque.ipynb
@@ -21,7 +21,8 @@
     "\n",
     "pd.set_option(\"display.float_format\", lambda val: lc.currency(val=val, symbol=False, grouping=True))\n",
     "\n",
-    "engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_MYSQL\"))"
+    "engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_MYSQL\"))\n",
+    "# engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_SQLITE\"))"
    ],
    "outputs": [],
    "execution_count": null
@@ -32,8 +33,8 @@
    "source": [
     "stmt: str = \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS lançamento (\n",
-    "        id_lançamento TINYINT AUTO_INCREMENT PRIMARY KEY,\n",
-    "        lançamento VARCHAR(60) NOT NULL\n",
+    "        id_lançamento INTEGER AUTO_INCREMENT PRIMARY KEY,\n",
+    "        lançamento TEXT NOT NULL\n",
     "    )\n",
     "\"\"\"\n",
     "with engine.begin() as cnx:\n",
@@ -54,7 +55,7 @@
    "cell_type": "code",
    "source": [
     "# exibir a tabela lançamento\n",
-    "pd.read_sql(sql=sa.text(\"SELECT id_lançamento AS Código, lançamento AS Lançamento FROM lançamento\"), con=engine)"
+    "pd.read_sql_query(sql=sa.text(\"SELECT id_lançamento AS Código, lançamento AS Lançamento FROM lançamento\"), con=engine)"
    ],
    "id": "f0eea38d422d58ae",
    "outputs": [],
@@ -67,10 +68,10 @@
     "stmt: str = \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS espelho (\n",
     "        id INTEGER AUTO_INCREMENT PRIMARY KEY,\n",
-    "        id_lançamento TINYINT NOT NULL,\n",
-    "        período MEDIUMINT NOT NULL,\n",
-    "        acerto BOOLEAN NOT NULL DEFAULT FALSE,\n",
-    "        valor DOUBLE NOT NULL\n",
+    "        id_lançamento INTEGER NOT NULL,\n",
+    "        período INTEGER NOT NULL,\n",
+    "        acerto INTEGER NOT NULL DEFAULT 0,\n",
+    "        valor REAL NOT NULL\n",
     "    )\n",
     "\"\"\"\n",
     "with engine.begin() as cnx:\n",
@@ -106,7 +107,7 @@
     "        GROUP BY período\n",
     "    \"\"\"\n",
     "\n",
-    "pd.read_sql(sql=sa.text(stmt), con=engine)"
+    "pd.read_sql_query(sql=sa.text(stmt), con=engine)"
    ],
    "id": "39a24acb4bc11a57",
    "outputs": [],
@@ -140,7 +141,7 @@
     "        e.acerto DESC\n",
     "\"\"\"\n",
     "\n",
-    "df_mes: pd.DataFrame = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
+    "df_mes: pd.DataFrame = pd.read_sql_query(sql=sa.text(stmt), con=engine)\n",
     "df_mes[\"período\"] = pd.to_datetime(df_mes[\"período\"], format=\"%Y%m\").dt.strftime(\"%B de %Y\")\n",
     "df_mes"
    ],
@@ -168,7 +169,7 @@
     "        e.período LIKE '{year}%'\n",
     "\"\"\"\n",
     "\n",
-    "df_ano: pd.DataFrame = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
+    "df_ano: pd.DataFrame = pd.read_sql_query(sql=sa.text(stmt), con=engine)\n",
     "df_ano = df_ano.pivot(values=[\"valor\"], index=[\"lançamento\", \"acerto\"], columns=[\"período\"])\n",
     "df_ano.columns = df_ano.columns.droplevel(level=0)\n",
     "df_ano.reset_index(inplace=True)\n",
@@ -209,7 +210,7 @@
     "        mes\n",
     "\"\"\"\n",
     "\n",
-    "df_anuais: pd.DataFrame = pd.read_sql(sql=stmt, con=engine)\n",
+    "df_anuais: pd.DataFrame = pd.read_sql_query(sql=stmt, con=engine)\n",
     "df_anuais = df_anuais.pivot(columns=[\"mes\"], index=[\"ano\"], values=[\"valor\"])\n",
     "df_anuais.columns = df_anuais.columns.droplevel(level=0)\n",
     "df_anuais.reset_index(inplace=True)\n",
@@ -268,7 +269,7 @@
     "            mes\n",
     "    \"\"\"\n",
     "\n",
-    "    df_anual: pd.DataFrame = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
+    "    df_anual: pd.DataFrame = pd.read_sql_query(sql=sa.text(stmt), con=engine)\n",
     "    df_anual = df_anual.pivot(columns=[\"mes\"], index=[\"ano\"], values=[\"valor\"])\n",
     "    df_anual.columns = df_anual.columns.droplevel(level=0)\n",
     "    df_anual.reset_index(inplace=True)\n",
