--- a/lançamentos_contracheque.ipynb
+++ b/lançamentos_contracheque.ipynb
@@ -8,6 +8,7 @@
     "from datetime import datetime\n",
     "import locale as lc\n",
     "import os\n",
+    "\n",
     "from dotenv import load_dotenv\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -21,8 +22,8 @@
     "\n",
     "pd.set_option(\"display.float_format\", lambda val: lc.currency(val=val, symbol=False, grouping=True))\n",
     "\n",
-    "engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_MYSQL\"))\n",
-    "# engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_SQLITE\"))"
+    "engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_MYSQL\"))  # para MySQL\n",
+    "# engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_SQLITE\"))  # para SQLite"
    ],
    "outputs": [],
    "execution_count": null
@@ -104,6 +105,7 @@
     "        SELECT período AS Período, SUM(valor) AS Total\n",
     "        FROM espelho\n",
     "        WHERE SUBSTR(período, 1, 4) = YEAR(CURRENT_DATE())\n",
+    "        -- WHERE SUBSTR(período, 1, 4) = STRFTIME('%Y', DATE('NOW'))\n",
     "        GROUP BY período\n",
     "    \"\"\"\n",
     "\n",
@@ -130,7 +132,10 @@
     "    SELECT\n",
     "        l.lançamento,\n",
     "        e.período,\n",
-    "        IF(e.acerto, 'acerto', 'mês') AS espelho,\n",
+    "        CASE\n",
+    "            WHEN e.acerto = 0 THEN 'mês'\n",
+    "            ELSE 'acerto'\n",
+    "        END AS espelho,\n",
     "        e.valor\n",
     "    FROM\n",
     "        espelho e\n",
@@ -160,7 +165,10 @@
     "    SELECT\n",
     "        l.lançamento,\n",
     "        e.período,\n",
-    "        IF(e.acerto = 1, 'acerto', 'mês') AS acerto,\n",
+    "        CASE\n",
+    "            WHEN e.acerto = 0 THEN 'mês'\n",
+    "            ELSE 'acerto'\n",
+    "        END AS acerto,\n",
     "        e.valor\n",
     "    FROM\n",
     "        espelho e\n",
@@ -202,6 +210,7 @@
     "    SELECT\n",
     "        SUBSTR(período, 1, 4) AS ano,\n",
     "        CONCAT('mês ', SUBSTR(período, 5)) AS mes,\n",
+    "        -- 'mês ' || SUBSTR(período, 5) AS mes,\n",
     "        SUM(valor) AS valor\n",
     "    FROM\n",
     "        espelho\n",
@@ -261,6 +270,7 @@
     "        SELECT\n",
     "            SUBSTR(período, 1, 4) AS ano,\n",
     "            CONCAT('mês ', SUBSTR(período, 5)) AS mes,\n",
+    "            -- 'mês ' || SUBSTR(período, 5) AS mes,\n",
     "            SUM(valor) AS valor\n",
     "        FROM\n",
     "            espelho\n",
