--- a/lançamentos_contracheque.ipynb
+++ b/lançamentos_contracheque.ipynb
@@ -22,8 +22,7 @@
     "\n",
     "pd.set_option(\"display.float_format\", lambda val: lc.currency(val=val, symbol=False, grouping=True))\n",
     "\n",
-    "engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_MYSQL\"))  # para MySQL\n",
-    "# engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_SQLITE\"))  # para SQLite"
+    "engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_AIVEN\"))"
    ],
    "outputs": [],
    "execution_count": null
@@ -35,7 +34,7 @@
     "stmt: str = \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS lançamento (\n",
     "        id_lançamento INTEGER AUTO_INCREMENT PRIMARY KEY,\n",
-    "        lançamento TEXT NOT NULL\n",
+    "        lançamento VARCHAR(60) NOT NULL\n",
     "    )\n",
     "\"\"\"\n",
     "with engine.begin() as cnx:\n",
@@ -105,7 +104,6 @@
     "        SELECT período AS Período, SUM(valor) AS Total\n",
     "        FROM espelho\n",
     "        WHERE SUBSTR(período, 1, 4) = YEAR(CURRENT_DATE())\n",
-    "        -- WHERE SUBSTR(período, 1, 4) = STRFTIME('%Y', DATE('NOW'))\n",
     "        GROUP BY período\n",
     "    \"\"\"\n",
     "\n",
@@ -210,7 +208,6 @@
     "    SELECT\n",
     "        SUBSTR(período, 1, 4) AS ano,\n",
     "        CONCAT('mês ', SUBSTR(período, 5)) AS mes,\n",
-    "        -- 'mês ' || SUBSTR(período, 5) AS mes,\n",
     "        SUM(valor) AS valor\n",
     "    FROM\n",
     "        espelho\n",
