--- a/lançamentos_contracheque.ipynb
+++ b/lançamentos_contracheque.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "pd.set_option(\"display.float_format\", lambda val: lc.currency(val=val, symbol=False, grouping=True))\n",
     "\n",
-    "engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_AIVEN\"))"
+    "engine: sa.Engine = sa.engine.create_engine(url=os.getenv(\"URL_AIVEN_PG\"))"
    ],
    "outputs": [],
    "execution_count": null
@@ -33,7 +33,8 @@
    "source": [
     "stmt: str = \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS lançamento (\n",
-    "        id_lançamento INTEGER AUTO_INCREMENT PRIMARY KEY,\n",
+    "        id_lançamento SERIAL PRIMARY KEY, -- PostgreSQL\n",
+    "        -- id_lançamento INTEGER AUTO_INCREMENT PRIMARY KEY, -- MySQL\n",
     "        lançamento VARCHAR(60) NOT NULL\n",
     "    )\n",
     "\"\"\"\n",
@@ -67,10 +68,11 @@
    "source": [
     "stmt: str = \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS espelho (\n",
-    "        id INTEGER AUTO_INCREMENT PRIMARY KEY,\n",
+    "        id SERIAL PRIMARY KEY, -- PostgreSQL\n",
+    "        -- id INTEGER AUTO_INCREMENT PRIMARY KEY, -- MySQL\n",
     "        id_lançamento INTEGER NOT NULL,\n",
     "        período INTEGER NOT NULL,\n",
-    "        acerto INTEGER NOT NULL DEFAULT 0,\n",
+    "        acerto BOOLEAN DEFAULT FALSE NOT NULL,\n",
     "        valor REAL NOT NULL\n",
     "    )\n",
     "\"\"\"\n",
@@ -101,11 +103,12 @@
    "source": [
     "# exibir os períodos com seus valores totais do ano anual\n",
     "stmt: str = \"\"\"\n",
-    "        SELECT período AS Período, SUM(valor) AS Total\n",
-    "        FROM espelho\n",
-    "        WHERE SUBSTR(período, 1, 4) = YEAR(CURRENT_DATE())\n",
-    "        GROUP BY período\n",
-    "    \"\"\"\n",
+    "    SELECT período AS Período, SUM(valor) AS Total\n",
+    "    FROM espelho\n",
+    "    WHERE LEFT(CAST(período AS CHAR(6)), 4) = CAST(EXTRACT(YEAR FROM CURRENT_DATE) AS CHAR(4)) -- PostgreSQL\n",
+    "    -- WHERE SUBSTR(período, 1, 4) = EXTRACT(YEAR FROM CURDATE()) -- MySQL\n",
+    "    GROUP BY período\n",
+    "\"\"\"\n",
     "\n",
     "pd.read_sql_query(sql=sa.text(stmt), con=engine)"
    ],
@@ -131,8 +134,8 @@
     "        l.lançamento,\n",
     "        e.período,\n",
     "        CASE\n",
-    "            WHEN e.acerto = 0 THEN 'mês'\n",
-    "            ELSE 'acerto'\n",
+    "            WHEN e.acerto THEN 'acerto'\n",
+    "            ELSE 'mês'\n",
     "        END AS espelho,\n",
     "        e.valor\n",
     "    FROM\n",
@@ -164,15 +167,16 @@
     "        l.lançamento,\n",
     "        e.período,\n",
     "        CASE\n",
-    "            WHEN e.acerto = 0 THEN 'mês'\n",
-    "            ELSE 'acerto'\n",
+    "            WHEN e.acerto THEN 'acerto'\n",
+    "            ELSE 'mês'\n",
     "        END AS acerto,\n",
     "        e.valor\n",
     "    FROM\n",
     "        espelho e\n",
     "        INNER JOIN lançamento l ON e.id_lançamento = l.id_lançamento\n",
     "    WHERE\n",
-    "        e.período LIKE '{year}%'\n",
+    "        CAST(e.período AS CHAR(6)) LIKE '{year}%' -- PostgreSQL\n",
+    "        -- e.período LIKE '{year}%' -- MySQL\n",
     "\"\"\"\n",
     "\n",
     "df_ano: pd.DataFrame = pd.read_sql_query(sql=sa.text(stmt), con=engine)\n",
@@ -206,8 +210,10 @@
     "# resumos totais anuais\n",
     "stmt: str = \"\"\"\n",
     "    SELECT\n",
-    "        SUBSTR(período, 1, 4) AS ano,\n",
-    "        CONCAT('mês ', SUBSTR(período, 5)) AS mes,\n",
+    "        LEFT(CAST(período AS CHAR(6)), 4) AS ano, -- PostgreSQL\n",
+    "        -- SUBSTR(período, 1, 4) AS ano, -- MySQL\n",
+    "        'mês ' || RIGHT(CAST(período AS CHAR(6)), 2) AS mes, -- PostgreSQL\n",
+    "        -- CONCAT('mês ', SUBSTR(período, 5)) AS mes, -- MySQL\n",
     "        SUM(valor) AS valor\n",
     "    FROM\n",
     "        espelho\n",
@@ -265,8 +271,10 @@
     "if 2005 <= year <= datetime.now().year:\n",
     "    stmt: str = f\"\"\"\n",
     "        SELECT\n",
-    "            SUBSTR(período, 1, 4) AS ano,\n",
-    "            CONCAT('mês ', SUBSTR(período, 5)) AS mes,\n",
+    "            LEFT(CAST(período AS CHAR(6)), 4) AS ano, -- PostgreSQL\n",
+    "            -- SUBSTR(período, 1, 4) AS ano, -- MySQL\n",
+    "            'mês ' || RIGHT(CAST(período AS CHAR(6)), 2) AS mes, -- PostgreSQL\n",
+    "            -- CONCAT('mês ', SUBSTR(período, 5)) AS mes, -- MySQL\n",
     "            SUM(valor) AS valor\n",
     "        FROM\n",
     "            espelho\n",
