--- a/lançamentos_contracheque.ipynb
+++ b/lançamentos_contracheque.ipynb
@@ -5,15 +5,14 @@
    "id": "initial_id",
    "metadata": {},
    "source": [
-    "from datetime import datetime\n",
     "import locale as lc\n",
     "import os\n",
     "\n",
-    "from dotenv import load_dotenv\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import sqlalchemy as sa\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -47,22 +46,6 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# exibir a tabela lançamento\n",
-    "pd.read_sql_query(sql=sa.text(\"SELECT id_lançamento AS Código, lançamento AS Lançamento FROM lançamento\"), con=engine)"
-   ],
-   "id": "f0eea38d422d58ae",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
    "metadata": {},
    "cell_type": "code",
    "source": [
@@ -89,8 +72,8 @@
    "cell_type": "code",
    "source": [
     "# inserir novos registros para a tabela espelho\n",
-    "df_new: pd.DataFrame = pd.read_csv(\"./src/espelho.csv\", sep=\",\", encoding=\"utf-8-sig\")\n",
-    "row_inserted: int = df_new.to_sql(name=\"espelho\", con=engine, if_exists=\"append\", index=False)\n",
+    "row_inserted: int = pd.read_csv(\"./src/espelho.csv\", sep=\",\", encoding=\"utf-8-sig\") \\\n",
+    "    .to_sql(name=\"espelho\", con=engine, if_exists=\"append\", index=False)\n",
     "print(f\"Foram {row_inserted} lançamentos inseridos com sucesso.\")"
    ],
    "id": "d6b5f9e004098d98",
@@ -101,8 +84,38 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# exibir os períodos com seus valores totais do ano anual\n",
-    "stmt: str = \"\"\"\n",
+    "release: pd.DataFrame = pd.read_sql(sql=sa.text(f\"SELECT * FROM lançamento\"), con=engine)\n",
+    "mirror: pd.DataFrame = pd.read_sql(sql=sa.text(f\"SELECT * FROM espelho\"), con=engine)\n",
+    "\n",
+    "joints: pd.DataFrame = pd.merge(left=release, right=mirror, how=\"inner\", on=[\"id_lançamento\"]) \\\n",
+    "    .drop([\"id\", \"id_lançamento\"], axis=1)"
+   ],
+   "id": "76ed21452e29f943",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# exibir a tabela de lançamento\n",
+    "release"
+   ],
+   "id": "f0eea38d422d58ae",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# exibir os períodos com seus soldos mensais do ano desejado\n",
+    "\"\"\"\n",
     "    SELECT período AS Período, SUM(valor) AS Total\n",
     "    FROM espelho\n",
     "    WHERE LEFT(CAST(período AS CHAR(6)), 4) = CAST(EXTRACT(YEAR FROM CURRENT_DATE) AS CHAR(4)) -- PostgreSQL\n",
@@ -110,9 +123,31 @@
     "    GROUP BY período\n",
     "\"\"\"\n",
     "\n",
-    "pd.read_sql_query(sql=sa.text(stmt), con=engine)"
+    "year: int = 2025\n",
+    "\n",
+    "dict_months = {\n",
+    "    int(f\"{year}01\"): f\"janeiro de {year}\",\n",
+    "    int(f\"{year}02\"): f\"fevereiro de {year}\",\n",
+    "    int(f\"{year}03\"): f\"março de {year}\",\n",
+    "    int(f\"{year}04\"): f\"abril de {year}\",\n",
+    "    int(f\"{year}05\"): f\"maio de {year}\",\n",
+    "    int(f\"{year}06\"): f\"junho de {year}\",\n",
+    "    int(f\"{year}07\"): f\"julho de {year}\",\n",
+    "    int(f\"{year}08\"): f\"agosto de {year}\",\n",
+    "    int(f\"{year}09\"): f\"setembro de {year}\",\n",
+    "    int(f\"{year}10\"): f\"outubro de {year}\",\n",
+    "    int(f\"{year}11\"): f\"novembro de {year}\",\n",
+    "    int(f\"{year}12\"): f\"dezembro de {year}\",\n",
+    "}\n",
+    "\n",
+    "df_year_month: pd.DataFrame = joints.copy()\n",
+    "df_year_month[\"ano\"] = pd.to_datetime(df_year_month[\"período\"], format=\"%Y%m\").dt.year\n",
+    "df_year_month = df_year_month[df_year_month[\"ano\"].eq(year)] \\\n",
+    "    .groupby([\"período\"])[\"valor\"].sum() \\\n",
+    "    .rename(index=dict_months)\n",
+    "df_year_month"
    ],
-   "id": "39a24acb4bc11a57",
+   "id": "c2b71111b09d8045",
    "outputs": [],
    "execution_count": null
   },
@@ -127,9 +162,7 @@
    },
    "source": [
     "# exibir a tabela espelho para o mês atual\n",
-    "period: int = datetime.now().year * 100 + datetime.now().month\n",
-    "\n",
-    "stmt: str = f\"\"\"\n",
+    "\"\"\"\n",
     "    SELECT\n",
     "        l.lançamento,\n",
     "        e.período,\n",
@@ -142,13 +175,17 @@
     "        espelho e\n",
     "        INNER JOIN lançamento l ON e.id_lançamento = l.id_lançamento\n",
     "    WHERE\n",
-    "        e.período = {period}\n",
+    "        e.período = :year_month\n",
     "    ORDER BY\n",
     "        e.acerto DESC\n",
     "\"\"\"\n",
     "\n",
-    "df_mes: pd.DataFrame = pd.read_sql_query(sql=sa.text(stmt), con=engine)\n",
+    "year_month: int = 202501\n",
+    "\n",
+    "df_mes: pd.DataFrame = joints[joints[\"período\"].eq(year_month)].copy() \\\n",
+    "    .sort_values([\"acerto\", \"valor\"], ascending=False).reset_index(drop=True)\n",
     "df_mes[\"período\"] = pd.to_datetime(df_mes[\"período\"], format=\"%Y%m\").dt.strftime(\"%B de %Y\")\n",
+    "df_mes[\"acerto\"] = df_mes[\"acerto\"].map({False: \"mês\", True: \"acerto\"})\n",
     "df_mes"
    ],
    "outputs": [],
@@ -160,9 +197,7 @@
    "metadata": {},
    "source": [
     "# exibir o gráfico do total de mês a mês para o ano atual\n",
-    "year: int = datetime.now().year\n",
-    "\n",
-    "stmt: str = f\"\"\"\n",
+    "\"\"\"\n",
     "    SELECT\n",
     "        l.lançamento,\n",
     "        e.período,\n",
@@ -175,30 +210,31 @@
     "        espelho e\n",
     "        INNER JOIN lançamento l ON e.id_lançamento = l.id_lançamento\n",
     "    WHERE\n",
-    "        CAST(e.período AS CHAR(6)) LIKE '{year}%' -- PostgreSQL\n",
-    "        -- e.período LIKE '{year}%' -- MySQL\n",
+    "        CAST(e.período AS CHAR(6)) LIKE ':year%' -- PostgreSQL\n",
+    "        -- e.período LIKE ':year%' -- MySQL\n",
     "\"\"\"\n",
     "\n",
-    "df_ano: pd.DataFrame = pd.read_sql_query(sql=sa.text(stmt), con=engine)\n",
-    "df_ano = df_ano.pivot(values=[\"valor\"], index=[\"lançamento\", \"acerto\"], columns=[\"período\"])\n",
+    "year: int = 2024\n",
+    "\n",
+    "df_ano: pd.DataFrame = joints.copy()\n",
+    "df_ano[\"ano\"] = pd.to_datetime(df_ano[\"período\"], format=\"%Y%m\").dt.year\n",
+    "df_ano[\"acerto\"] = df_ano[\"acerto\"].map({False: \"mês\", True: \"acerto\"})\n",
+    "df_ano = df_ano[df_ano[\"ano\"].eq(year)].drop([\"ano\"], axis=1) \\\n",
+    "    .pivot(values=[\"valor\"], index=[\"lançamento\", \"acerto\"], columns=[\"período\"])\n",
     "df_ano.columns = df_ano.columns.droplevel(level=0)\n",
-    "df_ano.reset_index(inplace=True)\n",
-    "df_ano.fillna(value=0, inplace=True)\n",
-    "df_ano.sort_values([\"acerto\"], inplace=True, ignore_index=True)\n",
+    "df_ano = df_ano.reset_index().fillna(value=0)\n",
     "df_ano.columns.rename(\"\", inplace=True)\n",
     "df_ano[\"média\"] = df_ano.mean(axis=1, numeric_only=True)\n",
     "df_ano[\"total\"] = df_ano[df_ano.columns[:-1]].sum(axis=1, numeric_only=True)\n",
-    "df_ano.loc[\"sumário\"] = df_ano.sum(numeric_only=True)\n",
-    "df_ano.fillna(value=\"\", inplace=True)\n",
+    "df_ano.loc[100] = df_ano.sum(numeric_only=True)\n",
     "df_ano.iloc[-1, 0] = \"Sumário\"\n",
-    "df_ano.iloc[-1, 1] = \"----------\"\n",
-    "df_ano.set_index([\"lançamento\", \"acerto\"], inplace=True)\n",
-    "df_ano.rename(columns={\n",
-    "    year * 100 + 1: \"jan\", year * 100 + 2: \"fev\", year * 100 + 3: \"mar\", year * 100 + 4: \"abr\",\n",
-    "    year * 100 + 5: \"mai\", year * 100 + 6: \"jun\", year * 100 + 7: \"jul\", year * 100 + 8: \"ago\",\n",
-    "    year * 100 + 9: \"set\", year * 100 + 10: \"out\", year * 100 + 11: \"nov\", year * 100 + 12: \"dez\",\n",
-    "}, inplace=True)\n",
-    "df_ano.reset_index()"
+    "df_ano.iloc[-1, 1] = \"total\"\n",
+    "df_ano = df_ano.sort_values([\"acerto\", \"total\"], ascending=[True, False]) \\\n",
+    "    .rename(columns={year*100 + 1: \"jan\", year*100 + 2: \"fev\", year*100 + 3: \"mar\", year*100 + 4: \"abr\",\n",
+    "                     year*100 + 5: \"mai\", year*100 + 6: \"jun\", year*100 + 7: \"jul\", year*100 + 8: \"ago\",\n",
+    "                     year*100 + 9: \"set\", year*100 + 10: \"out\", year*100 + 11: \"nov\", year*100 + 12: \"dez\"}) \\\n",
+    "    .reset_index(drop=True)\n",
+    "df_ano"
    ],
    "outputs": [],
    "execution_count": null
@@ -208,10 +244,10 @@
    "cell_type": "code",
    "source": [
     "# resumos totais anuais\n",
-    "stmt: str = \"\"\"\n",
+    "\"\"\"\n",
     "    SELECT\n",
-    "        LEFT(CAST(período AS CHAR(6)), 4) AS ano, -- PostgreSQL\n",
-    "        -- SUBSTR(período, 1, 4) AS ano, -- MySQL\n",
+    "        CAST(LEFT(CAST(período AS CHAR(6)), 4) AS INT) AS ano, -- PostgreSQL\n",
+    "        -- SUBSTR(período, 1, 4) * 1 AS ano, -- MySQL\n",
     "        'mês ' || RIGHT(CAST(período AS CHAR(6)), 2) AS mes, -- PostgreSQL\n",
     "        -- CONCAT('mês ', SUBSTR(período, 5)) AS mes, -- MySQL\n",
     "        SUM(valor) AS valor\n",
@@ -222,19 +258,19 @@
     "        mes\n",
     "\"\"\"\n",
     "\n",
-    "df_anuais: pd.DataFrame = pd.read_sql_query(sql=stmt, con=engine)\n",
-    "df_anuais = df_anuais.pivot(columns=[\"mes\"], index=[\"ano\"], values=[\"valor\"])\n",
+    "df_anuais: pd.DataFrame = joints[[\"período\", \"valor\"]].copy()\n",
+    "df_anuais = df_anuais.groupby([\"período\"])[\"valor\"].sum().reset_index()\n",
+    "df_anuais[\"ano\"] = pd.to_datetime(df_anuais[\"período\"], format=\"%Y%m\").dt.year\n",
+    "df_anuais[\"mês\"] = pd.to_datetime(df_anuais[\"período\"], format=\"%Y%m\").dt.month\n",
+    "df_anuais = df_anuais.pivot(columns=[\"mês\"], index=[\"ano\"], values=[\"valor\"])\n",
     "df_anuais.columns = df_anuais.columns.droplevel(level=0)\n",
-    "df_anuais.reset_index(inplace=True)\n",
-    "df_anuais[\"ano\"] = df_anuais[\"ano\"].astype(int)\n",
-    "df_anuais.set_index([\"ano\"], inplace=True)\n",
-    "df_anuais.fillna(0, inplace=True)\n",
+    "df_anuais = df_anuais.fillna(0).rename(columns={1: \"jan\", 2: \"fev\", 3: \"mar\", 4: \"abr\", 5: \"mai\", 6: \"jun\",\n",
+    "                                                7: \"jul\", 8: \"ago\", 9: \"set\", 10: \"out\", 11: \"nov\", 12: \"dez\"})\n",
     "df_anuais[\"média\"] = df_anuais.mean(axis=1)\n",
     "df_anuais[\"total\"] = df_anuais[df_anuais.columns[:-1]].sum(axis=1)\n",
-    "df_anuais.columns = [\"jan\", \"fev\", \"mar\", \"abr\", \"mai\", \"jun\", \"jul\", \"ago\", \"set\", \"out\", \"nov\", \"dez\", \"média\", \"total\"]\n",
     "df_anuais"
    ],
-   "id": "147d0960b697ba7",
+   "id": "83e6632938b2ca0",
    "outputs": [],
    "execution_count": null
   },
@@ -243,10 +279,10 @@
    "cell_type": "code",
    "source": [
     "# exibir o gráfico do total de mês a mês para o ano atual\n",
-    "year: int = datetime.now().year\n",
-    "\n",
     "plt.figure(figsize=(16, 6))\n",
     "plt.style.use(\"ggplot\")\n",
+    "\n",
+    "year = 2025\n",
     "\n",
     "ax: plt.Axes = sns.barplot(data=df_anuais.loc[[year], df_anuais.columns[:-2]])\n",
     "ax.set_title(f\"Espelho {year}\", loc=\"center\", fontweight=\"bold\", fontsize=12)\n",
@@ -258,57 +294,6 @@
     "plt.show()"
    ],
    "id": "2ac05ede5ffec6d3",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "# exibir o gráfico do total de mês a mês para o ano escolhido\n",
-    "year: int = int(input(\"Em que ano quer visualizar o gráfico (a partir de 2005)? \"))\n",
-    "\n",
-    "if 2005 <= year <= datetime.now().year:\n",
-    "    stmt: str = f\"\"\"\n",
-    "        SELECT\n",
-    "            LEFT(CAST(período AS CHAR(6)), 4) AS ano, -- PostgreSQL\n",
-    "            -- SUBSTR(período, 1, 4) AS ano, -- MySQL\n",
-    "            'mês ' || RIGHT(CAST(período AS CHAR(6)), 2) AS mes, -- PostgreSQL\n",
-    "            -- CONCAT('mês ', SUBSTR(período, 5)) AS mes, -- MySQL\n",
-    "            SUM(valor) AS valor\n",
-    "        FROM\n",
-    "            espelho\n",
-    "        GROUP BY\n",
-    "            ano,\n",
-    "            mes\n",
-    "    \"\"\"\n",
-    "\n",
-    "    df_anual: pd.DataFrame = pd.read_sql_query(sql=sa.text(stmt), con=engine)\n",
-    "    df_anual = df_anual.pivot(columns=[\"mes\"], index=[\"ano\"], values=[\"valor\"])\n",
-    "    df_anual.columns = df_anual.columns.droplevel(level=0)\n",
-    "    df_anual.reset_index(inplace=True)\n",
-    "    df_anual[\"ano\"] = df_anual[\"ano\"].astype(int)\n",
-    "    df_anual.set_index([\"ano\"], inplace=True)\n",
-    "    df_anual.fillna(0, inplace=True)\n",
-    "    df_anual[\"média\"] = df_anual.mean(axis=1)\n",
-    "    df_anual[\"total\"] = df_anual[df_anual.columns[:-1]].sum(axis=1)\n",
-    "    df_anual.columns = [\"jan\", \"fev\", \"mar\", \"abr\", \"mai\", \"jun\", \"jul\", \"ago\", \"set\", \"out\", \"nov\", \"dez\", \"média\", \"total\"]\n",
-    "\n",
-    "    plt.figure(figsize=(16, 6))\n",
-    "    plt.style.use(\"ggplot\")\n",
-    "\n",
-    "    ax: plt.Axes = sns.barplot(data=df_anual.loc[[year], df_anual.columns[:-2]])\n",
-    "    ax.set_title(f\"Espelho {year}\", loc=\"center\", fontweight=\"bold\", fontsize=12)\n",
-    "    ax.set(xlabel=\"\", ylabel=\"\", yticks=[])\n",
-    "\n",
-    "    for mes in range(12):\n",
-    "        ax.bar_label(ax.containers[mes], fmt=lambda i: lc.currency(val=i, symbol=False, grouping=True), fontsize=10)\n",
-    "\n",
-    "    plt.show()\n",
-    "else:\n",
-    "    print(f\"Não consta o contracheque do ano {year}.\")"
-   ],
-   "id": "a086be01f2306024",
    "outputs": [],
    "execution_count": null
   }
